# quick-ec2

./: .gitignore  README.md  app.py  cdk.json  pyproject.toml
diagram/: diagram.drawio
infra/: stack.py
parameters/: from_environment.py
